# AcornArranger-next

./: .gitignore  Makefile  README.md  ecosystem.config.js  package-lock.json  package.json  scope.md
.cursor/rules/: database-functions.mdc  database-migrations.mdc  database-rls-policies.mdc  database-schema-modification.mdc  postgres-sql-style-guide.mdc  shad-cn.mdc  supabase-auth.mdc  supabase-edge-functions.mdc  update-logging.mdc
.taskmaster/: config.json  state.json
.taskmaster/docs/: acornarranger-rebuild-prd.txt  task-6-legacy-comparison.md
AcornArranger/: .env.example  README.md  ecosystem.config.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  temp.json  tsconfig.tsbuildinfo  vitest.config.ts
AcornArranger/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx
AcornArranger/components/: InfoTooltip.tsx  auth-brand-home-link.tsx  login-form.tsx  profile-form.tsx  theme-switcher.tsx
AcornArranger/lib/: apiGuard.ts  auth.ts  safety.ts  toast.ts
AcornArranger/supabase/: config.toml
AcornArranger/systemd/: acorn-web.service
AcornArranger/test/: setup.ts
acornarranger-scheduler/: Makefile  README.md  pyproject.toml
acornarranger-scheduler/acornarranger_scheduler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
acornarranger-scheduler/src/: __init__.py  affinity.py  main.py  midnight.py  solver.py  team_formation.py  types.py
acornarranger-scheduler/systemd/: acorn-scheduler.service
app/: package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: README.md  page-structure.md  scope.md  ui-plan.md
(+239 files in other folders)
