[project]
name = "acornarranger-scheduler"
version = "0.1.0"
description = "OR-Tools VRPTW schedule builder sidecar for AcornArranger."
requires-python = ">=3.11"
dependencies = [
    "ortools==9.11.4210",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
